- More coding for Sprint #1

--- a/kitchentimer/resources/kitchentimer.qrc
+++ b/kitchentimer/resources/kitchentimer.qrc
@@ -1,6 +1,9 @@
 <!DOCTYPE RCC><RCC version="1.0">
   <qresource prefix="/">
-    <file>images/background-v1.png</file>
+    <!-- Loaded once resources -->
+    <file>images/background.png</file>
+    <file>images/logo.png</file>
+    <file>images/button-stick.png</file>
     <file>images/previous-timer.png</file>
     <file>images/next-timer.png</file>
     <file>images/previous-dish.png</file>
@@ -11,6 +14,11 @@
     <file>images/audio-disabled.png</file>
     <file>images/vibrosignal-enabled.png</file>
     <file>images/vibrosignal-disabled.png</file>
+    <file>images/audio-enabled.svg</file>
+    <file>images/audio-enabled-pressed.svg</file>
+    <file>images/audio-disabled.svg</file>
+    <file>images/audio-disabled-pressed.svg</file>
+    <file>images/vibrosignal-enabled.svg</file>
     <file>images/bookmarks.png</file>
     <file>images/reference-close.png</file>
     <file>images/reference-return.png</file>
@@ -18,10 +26,14 @@
 
     <file>fonts/Cartonsix NC.ttf</file>
 
-    <file>audio/alarm.pcm</file>
-
     <file>translations/ru.qm</file>
 
     <file>reference/reference.txt</file>
+
+    <!-- In-memory resident resources -->
+    <file>audio/alarm.pcm</file>
+    <file>audio/timer-start.pcm</file>
+    <file>audio/analog-timer-press.pcm</file>
+    <file>audio/analog-timer-release.pcm</file>
   </qresource>
 </RCC>
