- Implemented devel menu

--- a/kitchentimer/resources/kitchentimer.qrc
+++ b/kitchentimer/resources/kitchentimer.qrc
@@ -23,6 +23,8 @@
     <file>images/reference-close.png</file>
     <file>images/reference-return.png</file>
     <file>images/reference-search.png</file>
+    <file>images/analog-timer-core.png</file>
+    <file>images/analog-timer-handle.png</file>
 
     <file>fonts/Cartonsix NC.ttf</file>
 
